@@ -149,3 +149,6 @@
 	the set of installed packages in 'centos7/install_rivendell.sh'.
 2017-02-14 Fred Gleason <fredg@paravelsystems.com>
 	* Added 'centos7/visual.sh'.
+2017-02-14 Fred Gleason <fredg@paravelsystems.com>
+	* Modified instructions for setting the MariaDB password in
+	'docs/rivendell-install-rhel7.xml'.
